# ParseBench

./: .env.example  README.md  leaderboard.csv  pyproject.toml
apps/: README.md
apps/annotator/: .env.example  .gitignore  README.md  annotator.css  annotator.js  bbox_drag_helpers.js  extract_field_hash.js  formula_editor_adapter.js  formula_editor_utils.js  index.html  layout_attributes.js  layout_pages.js  pyproject.toml  reading_order.js  rule_definitions.json  rule_tags.js  save_coordinator.js  serve.py  table_editor_adapter.js  table_editor_utils.js
apps/annotator/tests/: add-test-collapse.test.mjs  bbox-drag-helpers.test.mjs  browser-url-sync.test.mjs  extract-bbox-draw-delete.test.mjs  extract-bbox-edit.test.mjs  extract-bbox-focus-scroll.test.mjs  extract-field-hash.test.mjs  extract-field-paths.test.mjs  extract-file-switch-reset.test.mjs  extract-key-textarea.test.mjs  extract-multi-bbox.test.mjs  extract-overlay-css.test.mjs  extract-overlay-selection.test.mjs  extract-stray-reassign.test.mjs  extract-tree-row-toggle.test.mjs  extract-tree-strays.test.mjs  extract-value-autosize.test.mjs  file-search.test.mjs  file-status.test.mjs  formula-editor-adapter.test.mjs  formula-editor-utils.test.mjs  get-rule-granularity.test.mjs  layout-attributes.test.mjs  layout-page-getter-filter-split.test.mjs  layout-pages.test.mjs  pdf-viewer-gestures.test.mjs  reading-order.test.mjs  rule-matches-active-filters-granularity.test.mjs  rule-tags.test.mjs  save-coordinator.test.mjs  space-optimization-layout.test.mjs  table-editor-adapter.test.mjs  table-editor-utils.test.mjs  test-card-density.test.mjs
apps/annotator/tests/fixtures/: rule_id_fixtures.json  v05_example.test.json
apps/visual_grounding_viewer/: .gitignore  README.md  app.py  pyproject.toml  start.sh
apps/visual_grounding_viewer/backend/: __init__.py  app.py  constants.py  gt_rules.py  indexer.py  loader.py  models.py  path_resolution.py  state.py
apps/visual_grounding_viewer/backend/routes/: browse.py  document.py  index.py
apps/visual_grounding_viewer/backend/tests/: test_browse_route.py  test_indexer.py  test_loader.py  test_path_resolution.py
apps/visual_grounding_viewer/frontend/: index.html  package-lock.json  package.json
apps/visual_grounding_viewer/frontend/src/: App.css  App.tsx  index.css
apps/visual_grounding_viewer/frontend/src/api/: client.ts
apps/visual_grounding_viewer/frontend/src/components/: DirectoryBrowserModal.tsx  FolderTree.tsx  ItemMarkdownPane.tsx  MarkdownPane.tsx  RightPanel.tsx  TextDiff.tsx  ViewerPane.tsx
apps/visual_grounding_viewer/frontend/src/lib/: deepLink.test.ts  deepLink.ts  folder.test.ts  folder.ts  grounding.test.ts  grounding.ts  gtOverlay.test.ts  gtOverlay.ts  itemGranularPreview.ts  markdownGrounding.test.ts  markdownGrounding.ts  textDiff.test.ts  textDiff.ts  time.ts
apps/visual_grounding_viewer/frontend/src/types/: api.ts
docs/: pipelines.md
src/parse_bench/: cli.py
src/parse_bench/evaluation/evaluators/: __init__.py  extract.py
src/parse_bench/evaluation/layout_adapters/: adapters.py
src/parse_bench/evaluation/layout_label_mappers/: mappers.py
src/parse_bench/evaluation/metrics/extract/: __init__.py  json_subset_match.py  json_subset_match_metric.py  list_unwrap.py  rule_based_metric.py  test_rules.py  test_types.py
src/parse_bench/evaluation/metrics/field_grounding/: __init__.py  core.py  extract_adapter.py  rule_filters.py  value_compare.py
src/parse_bench/evaluation/qa/: llm_service.py
src/parse_bench/inference/: cli.py  runner.py
src/parse_bench/inference/pipelines/: __init__.py  extract.py  layout.py  parse.py
src/parse_bench/inference/providers/: __init__.py  cancellation.py
src/parse_bench/inference/providers/extract/: __init__.py  citations.py  extend.py  llamaextract_v2_api.py
src/parse_bench/inference/providers/layoutdet/: __init__.py  _pymupdf4llm.py  pymupdf4llm.py
src/parse_bench/inference/providers/parse/: __init__.py  databricks_ai_parse.py  granite_vision.py  liteparse.py  llamaparse.py  markitdown.py  mineru2605pro.py  mistral_ocr.py  opendataloader.py  pdf_inspector.py  (+2 more)
src/parse_bench/pipeline/: cli.py
src/parse_bench/schemas/: layout_detection_output.py
tests/: test_llamaparse_base_url.py
(+1 files in other folders)
