[project]
name = "parse-bench"
version = "0.2.0"
description = "Document parsing evaluation benchmark"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apted>=1.0.3",
    "beautifulsoup4>=4.12.0",
    "bleach>=6.0.0",
    "fire>=0.7.1",
    "fuzzysearch>=0.7.3",
    "huggingface-hub>=0.20.0",
    "lxml>=5.0.0",
    "markdown>=3.0",
    "markdown2>=2.4.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.0.0",
    "python-Levenshtein>=0.25.0",
    "rapidfuzz>=3.0.0",
    "rich>=13.7.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
    "unidecode>=1.3.0",
    "anls-star>=0.1.0",
    "autoevals>=0.0.20",
    "datasets>=4.8.4",
]

[project.optional-dependencies]
runners = [
    "anthropic>=0.77.1",
    "azure-ai-documentintelligence>=1.0.0",
    "boto3>=1.34.0",
    "amazon-textract-textractor>=1.7.0",
    "chunkr-ai>=0.0.43",
    "docling-core>=2.71.0",
    "datalab-python-sdk",
    "extend-ai>=1.8.0",
    "google-genai>=1.0.0",
    "google-cloud-documentai>=2.20.0",
    "httpx>=0.28.0",
    "infinity-parser2>=0.3.0",
    "landingai-ade>=1.4.0",
    "llama-cloud>=1.4.1",
    "openai>=1.0.0",
    "pdf2image>=1.16.0",
    "pillow>=10.0.0",
    "pymupdf>=1.24.0",
    "pypdf>=6.4.0",
    "pytesseract>=0.3.10",
    "reductoai>=0.13.0",
    "unstructured-client>=0.26.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.14.5",
    "mypy>=1.18.2",
]

[project.scripts]
parse-bench = "parse_bench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parse_bench"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"src/parse_bench/analysis/detailed_report.py" = ["E501", "E402"]
"src/parse_bench/analysis/comparison_report.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["parse_bench"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "fire",
    "bleach",
    "markdown2",
    "apted",
    "apted.*",
    "fitz",
    "pandas",
    "fuzzysearch",
    "scipy.*",
    "sklearn.*",
    "lxml.*",
    "datalab_sdk",
    "datalab_sdk.*",
    "pytesseract",
    "botocore.*",
    "textractor",
    "textractor.*",
    "boto3",
    "autoevals.number",
    "autoevals.string",
    "dateutil",
    "dateutil.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "parse_bench.evaluation.metrics.parse._vendor_grits_reference"
ignore_errors = true

[[tool.mypy.overrides]]
module = "parse_bench.test_cases.parse_rule_schemas"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "--tb=short"]
