[project]
name = "visual-grounding-viewer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "pydantic>=2.11.0",
  "pymupdf>=1.25.5,<1.26.0",
  "pillow>=11.0.0",
  "python-dateutil>=2.9.0",
  "rapidfuzz>=3.14.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
